<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".presentation.CalculatePageActivity">

    <ImageButton
        android:id="@+id/ibtn_back_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:src="@drawable/arrow_back"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/calculate_autonomy"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_price_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:hint="@string/price_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_km_traveled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="name"
        android:hint="@string/km_traveled"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/tv_result"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Result "/>

</LinearLayout>