<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/card_car_favorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/star_border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_car_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="BMW"
                android:importantForAccessibility="no"
                android:src="@drawable/bmw_electric" />

            <TextView
                android:id="@+id/card_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/grey_obscure"
                android:text="@string/card_car_name"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_car_price"
                        android:textColor="@color/grey_obscure"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_car_battery"
                        android:textColor="@color/grey_obscure"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_car_power"
                        android:textColor="@color/grey_obscure"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/card_car_recharge"
                        android:textColor="@color/grey_obscure"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/card_car_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$ 450.000,00" />


                    <TextView
                        android:id="@+id/card_car_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="81,5 kWh" />

                    <TextView
                        android:id="@+id/card_car_power"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="544 cv" />

                    <TextView
                        android:id="@+id/card_car_recharge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8h30 (11 kW) / 18 min (250 kW)" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>